# xsp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  xsp.c
.github/workflows/: cmake-multi-platform.yml
src/: cli.c  private.h  xsp.c
src/anchored_memchr/: anchored_memchr.c  anchored_memchr.h
src/skip/: skip.c  skip.h
test/: bf.c
